fixed logo and image on home page and got spacing on nav

--- a/css/index.css
+++ b/css/index.css
@@ -48,6 +48,9 @@ table {
 
 * {
     box-sizing: border-box;
+    /* padding:0;
+    margin:0; */
+    /* max-width:100%; */
     border: 1px solid grey;
 }
 
@@ -83,13 +86,13 @@ p {
     justify-content:space-around;
     margin-bottom: 20px;
 }
-.left{
-    background-image: url('../img/lambda-black.png');
-}
+
 #top nav a{
     text-decoration: none;
     margin:20px;
 }
+
+
 
 .top-content {
     display: flex;
